Change bibliography and projective definitions
Only small changes; put references on new page and gave them an entry in
toc, and small additions to projective defs.

--- a/LaTeX/dissertation.tex
+++ b/LaTeX/dissertation.tex
@@ -45,5 +45,8 @@
 \appendix
 \section{Code}
 \lstinputlisting{../../diss-python/pollard.py}
+\clearpage
+
 \bibliography{master.bib}
+\addcontentsline{toc}{section}{References}
 \end{document}
