--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -193,15 +193,15 @@ Two good examples of projective curves with singular points are provided by the 
 		\draw 
 		plot (\x, {\x});
 	\end{tikzpicture}
-	\caption{The affine curve $x^3 - 2xy = 0$ in the visible part of $\an[2]$}
-	\label{affinecurveexample}
+	\caption{The cusp and node in the visible part of $\an[2]$}
+	\label{cuspandnode}
 \end{figure}
 We can see that the point $[0,0,1]$ (the origin in the affine plane) is a singular point on both curves, since
-\begin{align*}
-	C_x = 3X^2\\
-	C_y = 2YZ\\
-	C_z = Y^2
-\end{align*} % alignat
+\begin{alignat*}{2}
+	&C_X = -3X^2,\quad &&N_X = - 3X^2 - 2XZ\\
+	&C_Y = 2YZ,\quad &&N_Y = 2YZ\\
+	&C_Z = Y^2,\quad &&N_Z = Y^2 -X^2
+\end{alignat*}
 
 Singular points are important to consider as they are the points where there is no sensible notion of the tangent to a curve.
 The importance of this will become apparent later on.
