--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -2,12 +2,45 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Will Bolton at 2016-03-23 11:46:02 +0000 
+%% Created for Will Bolton at 2016-04-16 13:08:31 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{weil1948,
+	Author = {Weil, André},
+	Date-Added = {2016-04-16 12:07:22 +0000},
+	Date-Modified = {2016-04-16 12:07:31 +0000},
+	Number = {1041},
+	Publisher = {Hermann},
+	Title = {Sur les courbes algébriques et les variétés qui s' en déduisent},
+	Year = {1948}}
+
+@article{deligne1980,
+	Author = {Deligne, Pierre},
+	Date-Added = {2016-04-16 12:01:17 +0000},
+	Date-Modified = {2016-04-16 12:02:05 +0000},
+	Journal = {Publications Mathématiques de l'IHÉS},
+	Number = {1},
+	Pages = {137--252},
+	Publisher = {Springer},
+	Title = {La conjecture de Weil. II},
+	Volume = {52},
+	Year = {1980}}
+
+@article{deligne1974,
+	Author = {Deligne, Pierre},
+	Date-Added = {2016-04-16 12:01:13 +0000},
+	Date-Modified = {2016-04-16 12:01:58 +0000},
+	Journal = {Publications Mathématiques de l'Institut des Hautes Études Scientifiques},
+	Number = {1},
+	Pages = {273--307},
+	Publisher = {Springer},
+	Title = {La conjecture de Weil. I},
+	Volume = {43},
+	Year = {1974}}
 
 @book{bix2006,
 	Author = {Bix, Robert},
@@ -30,9 +63,9 @@
 	Author = {Hasse, Helmut},
 	Date-Added = {2016-03-21 15:20:35 +0000},
 	Date-Modified = {2016-03-21 15:33:25 +0000},
-	Journal = {Journal f{\"u}r die reine und angewandte Mathematik},
+	Journal = {Journal für die reine und angewandte Mathematik},
 	Pages = {193--208},
-	Title = {{Zur Theorie der abstrakten elliptischen Funktionenk{\"o}rper III. Die Struktur des Meromorphismenrings. Die Riemannsche Vermutung.}},
+	Title = {{Zur Theorie der abstrakten elliptischen Funktionenkörper III. Die Struktur des Meromorphismenrings. Die Riemannsche Vermutung.}},
 	Volume = {175},
 	Year = {1936}}
 
@@ -40,9 +73,9 @@
 	Author = {Hasse, Helmut},
 	Date-Added = {2016-03-21 15:20:28 +0000},
 	Date-Modified = {2016-03-21 15:33:17 +0000},
-	Journal = {Journal f{\"u}r die reine und angewandte Mathematik},
+	Journal = {Journal für die reine und angewandte Mathematik},
 	Pages = {69--88},
-	Title = {{Zur Theorie der abstrakten elliptischen Funktionenk{\"o}rper II. Automorphismen und Meromorphismen. Das Additionstheorem.}},
+	Title = {{Zur Theorie der abstrakten elliptischen Funktionenkörper II. Automorphismen und Meromorphismen. Das Additionstheorem.}},
 	Volume = {175},
 	Year = {1936}}
 
@@ -50,17 +83,17 @@
 	Author = {Hasse, Helmut},
 	Date-Added = {2016-03-21 15:20:24 +0000},
 	Date-Modified = {2016-03-21 15:33:01 +0000},
-	Journal = {Journal f{\"u}r die reine und angewandte Mathematik},
+	Journal = {Journal für die reine und angewandte Mathematik},
 	Pages = {55--62},
-	Title = {{Zur Theorie der abstrakten elliptischen Funktionenk{\"o}rper I. Die Struktur der Gruppe der Divisorenklassen endlicher Ordnung.}},
+	Title = {{Zur Theorie der abstrakten elliptischen Funktionenkörper I. Die Struktur der Gruppe der Divisorenklassen endlicher Ordnung.}},
 	Volume = {175},
 	Year = {1936}}
 
 @article{schoof1995,
-	Author = {Schoof, Ren{\'e}},
+	Author = {Schoof, René},
 	Date-Added = {2016-03-21 14:26:46 +0000},
 	Date-Modified = {2016-03-21 14:26:54 +0000},
-	Journal = {Journal de th{\'e}orie des nombres de Bordeaux},
+	Journal = {Journal de théorie des nombres de Bordeaux},
 	Number = {1},
 	Pages = {219--254},
 	Title = {Counting points on elliptic curves over finite fields},
