--- a/LaTeX/projectivedefinitions.tex
+++ b/LaTeX/projectivedefinitions.tex
@@ -219,3 +219,9 @@ As alluded to before, being able to find tangent lines plays an important part i
 \begin{definition}
 	A curve that contains one or more singular points is a singular curve. Otherwise, the curve is regular.
 \end{definition}
+
+\begin{definition}
+	A \emph{flex} is a point $P$ on a curve $F$ where the tangent to $F$ at $P$ intersects $F$ with multiplicity at least 3.
+\end{definition}
+
+Flexes are important points
