--- a/LaTeX/master.bib
+++ b/LaTeX/master.bib
@@ -15,20 +15,9 @@
 	Date-Modified = {2016-04-16 12:07:31 +0000},
 	Number = {1041},
 	Publisher = {Hermann},
+	Series = {Actualités scientifiques et industrielles},
 	Title = {Sur les courbes algébriques et les variétés qui s' en déduisent},
 	Year = {1948}}
-
-@article{deligne1980,
-	Author = {Deligne, Pierre},
-	Date-Added = {2016-04-16 12:01:17 +0000},
-	Date-Modified = {2016-04-16 12:02:05 +0000},
-	Journal = {Publications Mathématiques de l'IHÉS},
-	Number = {1},
-	Pages = {137--252},
-	Publisher = {Springer},
-	Title = {La conjecture de Weil. II},
-	Volume = {52},
-	Year = {1980}}
 
 @article{deligne1974,
 	Author = {Deligne, Pierre},
