Small additions to three files
If we're being honest, this is just some stuff from yesterday I forgot
to commit then. Nothing major. It's cool.

--- a/LaTeX/finiteelliptic.tex
+++ b/LaTeX/finiteelliptic.tex
@@ -1,4 +1,4 @@
-\subsubsection{The Reduction mod p Map}
+\subsubsection{The Reduction mod $p$ Map}
 \lipsum[1-3]
 \subsubsection{Addition Formulae for Points}
 For elliptic curves over a finite field $\mathbb{F}_p$, when adding points $(x_1,y_1) + (x_2,y_2) = (x',y')$,
