--- a/LaTeX/points.tex
+++ b/LaTeX/points.tex
@@ -1,6 +1,14 @@
-\subsubsection{Naïve Counting} % THIS INCONSISTENCY WILL BE AMENDED IN THE NEXT COMMIT
-\lipsum[1-3]
+\subsubsection{Naïve Counting}
+If one has taken an elliptic curve $E$ defined by $f(x,y)=0$ over a finite field $\fp$, a fundamental question to ask is about how many points there are on the curve.
+We have already established that there is still a point at infinity on the curve (in Weierstrass form, at $[0,1,0]$), but apart from that, there are a maximum of $p^2$ points. % Careful here
+The naïve approach, of course, is to simply run through all sets of points $(x,y) \in \fp \times \fp$ and test whether each point satisfies $f(x,y)=0$, but depending on the size of the field, this may or may not be practical.
+Despite this, a basic example of this method of counting is ran through in \Cref{hasseweil}.
+
+There are a few approaches possible to take when considering the number of points on an elliptic curve over a finite field, though, and we will cover a number of them.
 \subsubsection{The Hasse-Weil Estimate and Schoof's Algorithm}
+\label{hasseweil}
+The most fundamental theoretical result in finding the order of $E(\fp)$ is the Hasse-Weil theorem, which bounds the size of the group in terms of the prime modulus.
+The theorem was initially proved for elliptic curves by Helmut Hasse in \cite{hasse1936a}, \cite{hasse1936b} and \cite{hasse1936c}, and subsequently generalised to curves of higher genus by André Weil in \cite{weil1948}, proved by Pierre Deligne in \cite{deligne1974}.
 \input{h-w.tex}
 \subsubsection{Gauss' Theorem}
 \input{gauss.tex}
