--- a/LaTeX/ellipticdefinitions.tex
+++ b/LaTeX/ellipticdefinitions.tex
@@ -32,7 +32,7 @@ It is possible to turn the set of points of an elliptic curve $E$ into a group b
 We do not prove this in this document but direct readers to \cite{silverman2009}.
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[scale=0.5]{addition.png}
+	\includegraphics[scale=0.5]{../Figures/addition.png}
 	\caption{The chord-tangent composition law on an elliptic curve}
 	\label{chord-tangent}
 \end{figure}
